@@ -1,6 +1,7 @@
 package com.bootcamp.bankaccounts.service.impl;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -14,6 +15,8 @@ import com.bootcamp.bankaccounts.dto.AccountRequestDto;
 import com.bootcamp.bankaccounts.dto.AccountResponseDto;
 import com.bootcamp.bankaccounts.dto.Message;
 import com.bootcamp.bankaccounts.dto.Transaction;
+import com.bootcamp.bankaccounts.dto.TransferRequestDto;
+import com.bootcamp.bankaccounts.dto.TransferResponseDto;
 import com.bootcamp.bankaccounts.dto.TypeAccountDto;
 import com.bootcamp.bankaccounts.entity.Account;
 import com.bootcamp.bankaccounts.repository.AccountRepository;
@@ -69,15 +72,22 @@ public class AccountServiceImpl implements AccountService{
 	@Override
 	public Mono<AccountResponseDto> createAccountPerson(AccountRequestDto accountRequestDto) {
 		TypeAccountDto newAccount = getTypeAccount(accountRequestDto.getTypeAccount());
-		Account account = new Account(null,accountRequestDto.getCustomerId(),accountRequestDto.getTypeAccount(),newAccount.getType(), 0.00
-				, newAccount.getMaintenance(), newAccount.getTransactions(), newAccount.getDayOperation()
-				, accountRequestDto.getDateAccount(), accountRequestDto.getNumberAccount(), accountRequestDto.getTypeCustomer());
-		return customerRestClient.getPersonById(accountRequestDto.getCustomerId()).flatMap(c ->{
-			account.setTypeCustomer(c.getTypeCustomer());
-			return getAccountByIdCustomerPerson(accountRequestDto.getCustomerId(),newAccount.getType()).flatMap(v -> {
-				return Mono.just(new AccountResponseDto(null, "Personal client already has a bank account: "+newAccount.getType()));
-			}).switchIfEmpty(saveNewAccount(account));
-		}).defaultIfEmpty(new AccountResponseDto(null, "Client does not exist"));
+		Account account = new Account(null,accountRequestDto.getCustomerId(),accountRequestDto.getTypeAccount(),newAccount.getType(), accountRequestDto.getAmount()
+				, accountRequestDto.getAmount(), newAccount.getMaintenance(), accountRequestDto.getTransaction(), newAccount.getDayOperation()
+				, LocalDateTime.now(), accountRequestDto.getNumberAccount(), accountRequestDto.getTypeCustomer(), newAccount.getCommission(), 1);
+		AccountResponseDto accountResponseDto = new AccountResponseDto(null, account);
+		return validateTransactions(accountResponseDto)
+				.flatMap(validate -> validate.getAccount() == null
+					? Mono.just(validate)
+					: customerRestClient.getPersonById(accountRequestDto.getCustomerId()).flatMap(c ->{
+						account.setTypeCustomer(c.getTypeCustomer());
+						account.setIndTransaction(1);
+						if (account.getTransaction()==0) account.setIndTransaction(0);
+						return getAccountByIdCustomerPerson(accountRequestDto.getCustomerId(),newAccount.getType()).flatMap(v -> {
+							return Mono.just(new AccountResponseDto("Personal client already has a bank account: "+newAccount.getType(), null));
+						}).switchIfEmpty(saveNewAccount(account));
+					}).defaultIfEmpty(new AccountResponseDto("Client does not exist", null))
+				);
 	}
 	
 	/**
@@ -90,16 +100,23 @@ public class AccountServiceImpl implements AccountService{
 	@Override
 	public Mono<AccountResponseDto> createAccountCompany(AccountRequestDto accountRequestDto) {
 		TypeAccountDto newAccount = getTypeAccount(accountRequestDto.getTypeAccount());
-		Account account = new Account(null,accountRequestDto.getCustomerId(),accountRequestDto.getTypeAccount(),newAccount.getType(), 0.00
-				, newAccount.getMaintenance(), newAccount.getTransactions(), newAccount.getDayOperation()
-				, accountRequestDto.getDateAccount(), accountRequestDto.getNumberAccount(), accountRequestDto.getTypeCustomer());	
-		return customerRestClient.getCompanyById(accountRequestDto.getCustomerId()).flatMap(c ->{
-			account.setTypeCustomer(c.getTypeCustomer());
-			if(newAccount.getType().equals("C_CORRIENTE")) {
-				return saveNewAccount(account);
-			}
-			return Mono.just(new AccountResponseDto(null, "For company only type of account: C_CORRIENTE"));
-		}).defaultIfEmpty(new AccountResponseDto(null, "Client does not exist"));
+		Account account = new Account(null,accountRequestDto.getCustomerId(),accountRequestDto.getTypeAccount(),newAccount.getType(), accountRequestDto.getAmount()
+				, accountRequestDto.getAmount(), newAccount.getMaintenance(), accountRequestDto.getTransaction(), newAccount.getDayOperation()
+				, LocalDateTime.now(), accountRequestDto.getNumberAccount(), accountRequestDto.getTypeCustomer(), newAccount.getCommission(), 1);
+		AccountResponseDto accountResponseDto = new AccountResponseDto(null, account);
+		return validateTransactions(accountResponseDto)
+				.flatMap(validate -> validate.getAccount() == null
+					? Mono.just(validate)
+					: customerRestClient.getCompanyById(accountRequestDto.getCustomerId()).flatMap(c ->{
+						account.setTypeCustomer(c.getTypeCustomer());
+						account.setIndTransaction(1);
+						if (account.getTransaction()==0) account.setIndTransaction(0);
+						if(newAccount.getType().equals("C_CORRIENTE")) {
+							return saveNewAccount(account);
+						}
+						return Mono.just(new AccountResponseDto("For company only type of account: C_CORRIENTE", null));
+					}).defaultIfEmpty(new AccountResponseDto("Client does not exist", null))
+				);
 	}
 
 	/**
@@ -107,10 +124,10 @@ public class AccountServiceImpl implements AccountService{
 	 * Se obtiene una cuenta por el id findById()
 	 * Se guarda la cuenta save()
 	 * @param accountRequestDto
-	 * @return Mono<Account>
+	 * @return Mono<AccountResponseDto>
 	 */
 	@Override
-	public Mono<Account> updateAccount(AccountRequestDto accountRequestDto) {
+	public Mono<AccountResponseDto> updateAccount(AccountRequestDto accountRequestDto) {
 		return accountRepository.findById(accountRequestDto.getId())
                 .flatMap(uAccount -> {
                 	uAccount.setCustomerId(accountRequestDto.getCustomerId());
@@ -120,11 +137,16 @@ public class AccountServiceImpl implements AccountService{
                 	uAccount.setMaintenance(accountRequestDto.getMaintenance());
                 	uAccount.setTransaction(accountRequestDto.getTransaction());
                 	uAccount.setOperationDay(accountRequestDto.getOperationDay());
-                	uAccount.setDateAccount(accountRequestDto.getDateAccount());
                 	uAccount.setNumberAccount(accountRequestDto.getNumberAccount());
                 	uAccount.setTypeCustomer(accountRequestDto.getTypeCustomer());
-                    return accountRepository.save(uAccount);
-        });
+                	uAccount.setIndTransaction(accountRequestDto.getTransaction() > 0 ? 1 : 0);
+                	AccountResponseDto accountResponseDto = new AccountResponseDto(null, uAccount);
+                	return validateTransactions(accountResponseDto)
+            				.flatMap(validate -> validate.getAccount() == null
+            				? Mono.just(validate)
+            				: accountRepository.save(uAccount)
+            					.map(savedAccount -> new AccountResponseDto(validate.getMessage(), savedAccount)));
+        }).switchIfEmpty(Mono.just(new AccountResponseDto("Account does not exist", null)));
 	}
 
 	/**
@@ -154,20 +176,20 @@ public class AccountServiceImpl implements AccountService{
 	 */
 	@Override
 	public Mono<AccountResponseDto> depositAccount(AccountRequestDto accountRequestDto) {
-		LocalDateTime myDateObj = LocalDateTime.now();
-		return accountRepository.findById(accountRequestDto.getId()).filter(a -> a.getTransaction()>=0).flatMap(uAccount -> {
-			if(uAccount.getTransaction() - 1 >= 0) {
-				if(uAccount.getDescripTypeAccount().equals("PLAZO_FIJO") && uAccount.getOperationDay()!=myDateObj.getDayOfMonth()) {
-					return Mono.just(new AccountResponseDto(null, "Day of the month not allowed for PLAZO_FIJO"));
-				}
-				uAccount.setAmount(uAccount.getAmount() + accountRequestDto.getAmount());
-				uAccount.setTransaction(uAccount.getTransaction() - 1);
-	            return accountRepository.save(uAccount).flatMap(account -> {
-	            	return registerTransaction(uAccount, accountRequestDto.getAmount(),"DEPOSITO");
-	            });
+		return accountRepository.findById(accountRequestDto.getId()).flatMap(uAccount -> {
+			Double amount = uAccount.getAmount() + accountRequestDto.getAmount();
+			Double commission = uAccount.getTransaction() > 0 ? (0.0):(uAccount.getCommission());
+			if(amount < uAccount.getCommission()) return Mono.just(new AccountResponseDto("The operation cannot be carried out for an account amount less than the commission", null));
+			if(uAccount.getDescripTypeAccount().equals("PLAZO_FIJO") && uAccount.getOperationDay() != LocalDateTime.now().getDayOfMonth()) {
+				return Mono.just(new AccountResponseDto("Day of the month not allowed for PLAZO_FIJO", null));
 			}
-			return Mono.just(new AccountResponseDto(null, "Exhausted monthly movements limit"));
-        });
+			uAccount.setAmount(amount-commission);
+			uAccount.setIndTransaction(uAccount.getTransaction() - 1 >= 0 ? 1 : 0);
+			uAccount.setTransaction(uAccount.getTransaction() > 0 ? (uAccount.getTransaction() - 1) : (0));
+            return accountRepository.save(uAccount).flatMap(account -> {
+            	return registerTransaction(uAccount, accountRequestDto.getAmount(),"DEPOSITO", uAccount.getIndTransaction() == 1 ? 0:uAccount.getCommission());
+            });
+        }).defaultIfEmpty(new AccountResponseDto("Account does not exist", null));
 	}
 
 	/**
@@ -180,24 +202,23 @@ public class AccountServiceImpl implements AccountService{
 	 */
 	@Override
 	public Mono<AccountResponseDto> withdrawalAccount(AccountRequestDto accountRequestDto) {
-		LocalDateTime myDateObj = LocalDateTime.now();
 		return accountRepository.findById(accountRequestDto.getId()).flatMap(uAccount -> {
-			if(uAccount.getTransaction() - 1 >= 0) {
-				Double amount = uAccount.getAmount() - accountRequestDto.getAmount();
-				if(amount >= 0) {
-					if(uAccount.getDescripTypeAccount().equals("PLAZO_FIJO") && uAccount.getOperationDay()!=myDateObj.getDayOfMonth()) {
-						return Mono.just(new AccountResponseDto(null, "Day of the month not allowed for PLAZO_FIJO"));
-					}
-					uAccount.setAmount(amount);
-					uAccount.setTransaction(uAccount.getTransaction() - 1);
-		            return accountRepository.save(uAccount).flatMap(account -> {
-		            	return registerTransaction(uAccount, accountRequestDto.getAmount(),"RETIRO");
-		            });
+			Double amount = uAccount.getAmount() - accountRequestDto.getAmount();
+			Double commission = uAccount.getTransaction() > 0 ? (0.0):(uAccount.getCommission());
+			if(amount >= 0) {
+				if(uAccount.getDescripTypeAccount().equals("PLAZO_FIJO") && uAccount.getOperationDay()!=LocalDateTime.now().getDayOfMonth()) {
+					return Mono.just(new AccountResponseDto("Day of the month not allowed for PLAZO_FIJO", null));
 				}
-				return Mono.just(new AccountResponseDto(null, "You don't have enough balance"));
+				if(amount < uAccount.getCommission()) return Mono.just(new AccountResponseDto("The operation cannot be carried out for an account amount less than the commission", null));
+				uAccount.setAmount(amount-commission);
+				uAccount.setIndTransaction(uAccount.getTransaction() - 1 >= 0 ? 1 : 0);
+				uAccount.setTransaction(uAccount.getTransaction()>0?(uAccount.getTransaction() - 1):(0));
+	            return accountRepository.save(uAccount).flatMap(account -> {
+	            	return registerTransaction(uAccount, accountRequestDto.getAmount(),"RETIRO", uAccount.getIndTransaction() == 1? 0 : uAccount.getCommission());
+	            });
 			}
-			return Mono.just(new AccountResponseDto(null, "Exhausted monthly movements limit"));
-        });
+			return Mono.just(new AccountResponseDto("You don't have enough balance", null));
+        }).defaultIfEmpty(new AccountResponseDto("Account does not exist", null));
 	}
 
 	/**
@@ -211,17 +232,6 @@ public class AccountServiceImpl implements AccountService{
 				.filter(c -> c.getCustomerId().equals(customerId));
 	}
 	
-	/**
-	 * Reiniciar el numero de movimientos de las cuentas
-	 * Actualiza los movimientos permitidos a todas las cuentas en updateTransaction(); 
-	 * @return Mono<Message>
-	 */
-	@Override
-	public Mono<Message> restartTransactions() {
-		return updateTransaction().collectList().flatMap(c -> {
-			return Mono.just(new Message("The number of transactions of the accounts was satisfactorily restarted"));
-		});
-	}
 	
 	/**
 	 * Obtiene nombre, movimientos y mantenimiento según el tipo de cuenta
@@ -229,9 +239,8 @@ public class AccountServiceImpl implements AccountService{
 	 * @return TypeAccountDto
 	 */
 	private TypeAccountDto getTypeAccount(Integer idType) {
-		Predicate<TypeAccountDto> p = f -> f.getId()==idType;
-		TypeAccountDto type = typeAccount.getAccounts().filter(p).collect(Collectors.toList()).get(0);
-		return type;
+		Predicate<TypeAccountDto> p = f -> f.getId().equals(idType);
+		return typeAccount.getAccounts().filter(p).toList().get(0);
     }
 
 	/**
@@ -254,7 +263,9 @@ public class AccountServiceImpl implements AccountService{
 	 */
 	private Mono<AccountResponseDto> saveNewAccount(Account account) {
 		return accountRepository.save(account).flatMap(x -> {
-			return Mono.just(new AccountResponseDto(account, "Account created successfully"));
+			return registerTransaction(account, account.getAmount(),"APERTURA", 0.0).flatMap(t1 -> {
+				return Mono.just(new AccountResponseDto("Account created successfully", x));
+			});
 		});
 	}
 	
@@ -265,30 +276,78 @@ public class AccountServiceImpl implements AccountService{
 	 * @param typeTransaction
 	 * @return Mono<AccountResponseDto>
 	 */
-	private Mono<AccountResponseDto> registerTransaction(Account uAccount, Double amount, String typeTransaction){
+	private Mono<AccountResponseDto> registerTransaction(Account uAccount, Double amount, String typeTransaction, Double commission){
 		Transaction transaction = new Transaction();
 		transaction.setCustomerId(uAccount.getCustomerId());
 		transaction.setProductId(uAccount.getId());
 		transaction.setProductType(uAccount.getDescripTypeAccount());
 		transaction.setTransactionType(typeTransaction);
 		transaction.setAmount(amount);
-		transaction.setTransactionDate(new Date());
+		transaction.setTransactionDate(LocalDateTime.now());
 		transaction.setCustomerType(uAccount.getTypeCustomer());
+		transaction.setBalance(uAccount.getAmount());
 		return transactionRestClient.createTransaction(transaction).flatMap(t -> {
-			return Mono.just(new AccountResponseDto(uAccount, "Successful transaction"));
+			if(commission>0) {
+				transaction.setAmount(commission);
+				transaction.setTransactionType("COMISION");
+				return transactionRestClient.createTransaction(transaction).flatMap(d -> {
+					return Mono.just(new AccountResponseDto("Successful transaction", uAccount));
+				});
+			}
+			return Mono.just(new AccountResponseDto("Successful transaction", uAccount));
         });
 	}
 	
-	/**
-	 * Obtiene todas las transacciónes y actualiza el numero de transacciones permitidas
-	 * @return Flux<Account>
-	 */
-	private Flux<Account> updateTransaction(){
-		return  accountRepository.findAll()
-				.flatMap(c -> {
-					c.setTransaction(getTypeAccount(c.getTypeAccount()).getTransactions());
-					return accountRepository.save(c);
-				});
+	@Override
+	public Mono<TransferResponseDto> transferBetweenAccounts(TransferRequestDto transferRequestDto) {
+		return accountRepository.findById(transferRequestDto.getOriginAccount()).flatMap(a -> {
+			return accountRepository.findById(transferRequestDto.getDestinationAccount()).filter(c -> !c.getId().equals(a.getId())).flatMap(b -> {
+				if(a.getCustomerId().equals(b.getCustomerId())) {
+					if(a.getAmount() - transferRequestDto.getAmount() < 0)
+						return Mono.just(new TransferResponseDto("You do not have a sufficient balance in your origin account", null));
+					a.setAmount(a.getAmount() - transferRequestDto.getAmount());
+					b.setAmount(b.getAmount() + transferRequestDto.getAmount());
+		            return accountRepository.save(a).flatMap(account1 -> {
+		            	return accountRepository.save(b).flatMap(account2 -> {
+		            		return registerTransaction(account1, transferRequestDto.getAmount(),"TRANSFERENCIA ENTRE CUENTAS - RETIRO", 0.0).flatMap(t1 -> {
+		            			return registerTransaction(account2, transferRequestDto.getAmount(),"TRANSFERENCIA ENTRE CUENTAS - DEPOSITO", 0.0).flatMap(t2 -> {
+		            				return Mono.just(new TransferResponseDto("Successful transaction between accounts", Arrays.asList(a,b)));
+		            			});
+		            		});
+		            	});
+		            });
+				}else {
+					return Mono.just(new TransferResponseDto("Accounts are not from the same client", null));
+				}
+			}).defaultIfEmpty(new TransferResponseDto("Destination Account does not exist, enter another account", null));
+		}).defaultIfEmpty(new TransferResponseDto("Origin Account does not exist", null));
 	}
+
+	@Override
+	public Mono<TransferResponseDto> transferThirdParty(TransferRequestDto transferRequestDto) {
+		return accountRepository.findById(transferRequestDto.getOriginAccount()).flatMap(a -> {
+			return accountRepository.findById(transferRequestDto.getDestinationAccount()).filter(c -> !(c.getCustomerId().equals(a.getCustomerId()))).flatMap(b -> {
+				if(a.getAmount() - transferRequestDto.getAmount() < 0)
+					return Mono.just(new TransferResponseDto("You do not have a sufficient balance in your origin account", null));
+				a.setAmount(a.getAmount() - transferRequestDto.getAmount());
+				b.setAmount(b.getAmount() + transferRequestDto.getAmount());
+	            return accountRepository.save(a).flatMap(account1 -> {
+	            	return accountRepository.save(b).flatMap(account2 -> {
+	            		return registerTransaction(account1, transferRequestDto.getAmount(),"TRANSFERENCIA A TERCEROS - RETIRO", 0.0).flatMap(t1 -> {
+	            			return registerTransaction(account2, transferRequestDto.getAmount(),"TRANSFERENCIA A TERCEROS - DEPOSITO", 0.0).flatMap(t2 -> {
+	            				return Mono.just(new TransferResponseDto("successful third-party account transaction", Arrays.asList(a,b)));
+	            			});
+	            		});
+	            	});
+	            });
+			}).defaultIfEmpty(new TransferResponseDto("Destination Account does not exist, enter another account", null));
+		}).defaultIfEmpty(new TransferResponseDto("Origin Account does not exist", null));
+	}
+	
+	private Mono<AccountResponseDto> validateTransactions(AccountResponseDto accountResponseDto) {
+        return Mono.just(accountResponseDto)
+            .filter(account -> account.getAccount().getTransaction() != null && account.getAccount().getTransaction() <= 20)
+            .switchIfEmpty(Mono.just(new AccountResponseDto("transaction: must have a maximum of 20 transactions",null)));
+    }
 	
 }
